[gd_scene load_steps=2 format=3 uid="uid://f46qh73hrk4y"]

[ext_resource type="Script" path="res://Scripts/confirmation_popup.gd" id="1_x7akt"]

[node name="ConfirmationPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -30.5
offset_right = 67.5
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7akt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Some Text?"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Confirm" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
